# ProjectPart2

./: CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: c-cpp.yml
files/: doFiles.cpp  testFile1.txt  testFile2.txt  testFile3.txt
internal/: methods.h
tests/: computingTests.cpp
